cmake_minimum_required(VERSION 3.29)
project(OS)

set(CMAKE_CXX_STANDARD 20)

add_executable(OS
        #mid_term_test.cpp
        src/process/PCB.h
        src/process/PCBpriochain.cpp
        src/process/PCBpriochain.h
        src/sys/sys.cpp
        src/sys/sys.h
        src/process/PCBchain.h
        src/process/PCBclockchain.cpp
        src/process/PCBclockchain.h
        src/resources/resources.h
        src/process/deadlock.cpp
        src/process/deadlock.h
        src/memory/memory.h
        src/memory/VMmanager.cpp
        src/memory/VMmanager.h
        src/memory/Blocks.h
        src/memory/FIFOBlocks.h
        src/memory/LRUBlocks.h
        src/VirtualProcess/VirtualProcess.h
        src/process/PCBchain.cpp
        src/VirtualProcess/ProcessGenerater.h
        src/memory/OPT.h
        src/user/user.h
        src/user/userManager.cpp
        src/user/userManager.h
        src/file/file.h
        src/file/inode.h
        src/file/virtualinode.cpp
        src/file/virtualinode.h
        src/file/fBlockManager.cpp
        src/file/fBlockManager.h
        src/file/fileSystem.cpp
        src/file/fileSystem.h
        src/file/inodeManager.cpp
        src/file/inodeManager.h
        src/file/fsconst.h
        src/file/directory_inode.cpp
        src/file/directory_inode.h
        src/file/fileManager.cpp
        src/file/fileManager.h
        src/file/fdtable.cpp
        src/file/fdtable.h
        src/shell/command.h
        src/shell/command/mkdir.cpp
        src/shell/command/mkdir.h
        src/shell/command/cd.cpp
        src/shell/command/cd.h
        src/shell/command/append.cpp
        src/shell/command/append.h
        src/shell/command/edit.cpp
        src/shell/command/edit.h
        src/shell/command/read.cpp
        src/shell/command/read.h
        src/shell/command/login.cpp
        src/shell/command/login.h
        src/shell/commandPharser.cpp
        src/shell/commandPharser.h
        src/shell/shell.cpp
        src/shell/shell.h
        src/shell/command/show.cpp
        src/shell/command/show.h
        final_test.cpp
        src/shell/command/Open.cpp
        src/shell/command/Open.h
        src/shell/command/rm.cpp
        src/shell/command/rm.h
        src/shell/command/back.cpp
        src/shell/command/back.h
)
